--- a/backend/app/templates/profile.html
+++ b/backend/app/templates/profile.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set background_image = url_for('static', filename='images/profile_background.jpg') %}
 
 {% block title %}Your Profile - Matcha{% endblock %}
 
@@ -110,6 +111,8 @@
     </form>
 </div>
 {% endblock %}
+
+
 
 
 
