--- a/backend/app/templates/logout.html
+++ b/backend/app/templates/logout.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set background_image = url_for('static', filename='images/logout_background.jpg') %}
 
 {% block title %}Logout - Matcha{% endblock %}
 
@@ -16,9 +17,11 @@
       </div>
     {% endif %}
 
-    <a href="{{ url_for('users.home') }}" class="btn btn-primary mt-3">Do you want to try again?</a>
+    <a href="{{ url_for('auth.home') }}" class="btn btn-primary mt-3">Do you want to try again?</a>
 </div>
 {% endblock %}
+
+
 
 
 
